objects/zqu__QuoteProductOptionGroup__c.object
<CustomObject>
    <description>A group of optional products that the user can select.</description>
    <fields>
        <fullName>zqu__Max_Option__c</fullName>
        <description>The maximum number of Quote Options that can be selected from this group. Inherited from Product Option Group.</description>
        <inlineHelpText>The maximum number of Quote Options that can be selected from this group. Inherited from Product Option Group.</inlineHelpText>
        <label>Max Option</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__Min_Option__c</fullName>
        <description>The minimum number of Quote Options that must be selected from this group. Inherited from Product Option Group.</description>
        <inlineHelpText>The minimum number of Quote Options that must be selected from this group. Inherited from Product Option Group.</inlineHelpText>
        <label>Min Option</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__ParentProduct__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>A reference to the product that contains this group.</description>
        <inlineHelpText>A reference to the product that contains this group.</inlineHelpText>
        <label>Parent Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Quote Product Option Groups</relationshipLabel>
        <relationshipName>Quote_Product_Option_Groups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zqu__ProductOptionGroup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>A reference to the original Product Option Group from the Product Catalog.</description>
        <inlineHelpText>A reference to the original Product Option Group from the Product Catalog.</inlineHelpText>
        <label>Product Option Group</label>
        <referenceTo>zqu__ProductOptionGroup__c</referenceTo>
        <relationshipLabel>Quote Product Option Groups</relationshipLabel>
        <relationshipName>Quote_Product_Option_Groups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zqu__Quote__c</fullName>
        <description>The quote that contains this Quote Option Group.</description>
        <inlineHelpText>The quote that contains this Quote Option Group.</inlineHelpText>
        <label>Quote</label>
        <referenceTo>zqu__Quote__c</referenceTo>
        <relationshipLabel>Quote Product Option Groups</relationshipLabel>
        <relationshipName>Quote_Product_Option_Groups</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>zqu__RootProduct__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The top-level product in the bundle that contains this group.</description>
        <inlineHelpText>The top-level product in the bundle that contains this group.</inlineHelpText>
        <label>Root Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Quote Product Option Groups (Root Product)</relationshipLabel>
        <relationshipName>Quote_Product_Option_Groups1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zqu__RootQrpId__c</fullName>
        <description>The Id of the top level Quote Rate Plan in the bundle.</description>
        <inlineHelpText>The Id of the top level Quote Rate Plan in the bundle.</inlineHelpText>
        <label>Root Quote Rate Plan Id</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <label>Quote Product Option Group</label>
    <nameField>
        <label>Quote Product Option Group Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Quote Product Option Groups</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>zqu__Max_Option_Rule</fullName>
        <active>true</active>
        <description>Max Option cannot be less than 0.</description>
        <errorConditionFormula>AND( NOT( ISNULL(zqu__Max_Option__c) ) ,
            zqu__Max_Option__c &lt; 0)</errorConditionFormula>
        <errorDisplayField>zqu__Max_Option__c</errorDisplayField>
        <errorMessage>Max Option cannot be less than 0.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>zqu__Min_Option_Less_Than_Max</fullName>
        <active>true</active>
        <description>Min Option should be less than Max Option</description>
        <errorConditionFormula>AND( NOT( ISNULL( zqu__Min_Option__c ) ) ,
            NOT( ISNULL( zqu__Max_Option__c ) ) ,
            zqu__Min_Option__c  &gt; zqu__Max_Option__c )</errorConditionFormula>
        <errorDisplayField>zqu__Min_Option__c</errorDisplayField>
        <errorMessage>Min Option should be equal or less  than Max Option</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>zqu__Min_Option_Rule</fullName>
        <active>true</active>
        <description>Min Option cannot be less than 0</description>
        <errorConditionFormula>AND( NOT( ISNULL( zqu__Min_Option__c ) ) ,
            zqu__Min_Option__c  &lt; 0)</errorConditionFormula>
        <errorDisplayField>zqu__Min_Option__c</errorDisplayField>
        <errorMessage>Min Option cannot be less than 0</errorMessage>
    </validationRules>
</CustomObject>